Fixed horizontal scroll, added more work experiences

--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -2,6 +2,7 @@ body {
     font-family: "Open Sans", sans-serif;
     color: #272829;
     background-color: black !important;
+    overflow-x: hidden;
   }
   
   h1, h2, h3, h4, h5, h6 {
@@ -485,7 +486,6 @@ section {
   overflow: hidden;
   position: relative;
   margin: 0 auto;
-  width: 100%;
 }
   
 .work-terminal::before {
